inputhandler now tick